--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </a>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-            <video src="assets/imgs/1234.mp4" type="video/mp4" controls  class="gallary-img">
+            <video src="assets/imgs/primervideo.mp4" type="video/mp4" controls  class="gallary-img">
            
                 
             </a>
