--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </a>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-            <video src="assets/imgs/12345.mp4" type="video/mp4" controls class="gallary-img">
+            <video src="assets/imgs/IMG_1158.MOV" type="video/MOV" controls class="gallary-img">
             
               
             </a>
