Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <h2 class="mb-4">Sobre Nosotros</h2>
                         <p>¡Bienvenidos a Iglesia de Dios Puerta Eterna!
 
-                            Desde nuestra fundación hace 12 años con nuestros Pastores Jorge y Sonia Funes, hemos sido una comunidad de fe comprometida a crecer juntos en la gracia y el conocimiento de nuestro Señor Jesucristo. En el corazón de nuestro ministerio está el deseo de compartir el amor de Cristo y el mensaje de esperanza con nuestra congregación y la comunidad.</p>
+                            Desde nuestra fundación hace 12 años con nuestros Pastores Jorge y Sonia Funez, hemos sido una comunidad de fe comprometida a crecer juntos en la gracia y el conocimiento de nuestro Señor Jesucristo. En el corazón de nuestro ministerio está el deseo de compartir el amor de Cristo y el mensaje de esperanza con nuestra congregación y la comunidad.</p>
                         <p>A medida que miramos hacia el futuro, estamos emocionados por lo que Dios tiene preparado para nosotros. Continuaremos compartiendo el mensaje del evangelio, discipulando a nuevos creyentes y sirviendo a nuestra comunidad de maneras aún más significativas. Queremos seguir siendo una luz en medio de la oscuridad y un refugio de esperanza para aquellos que buscan la verdad. <br>¡Esperamos conocerte pronto y compartir juntos la alegría de vivir en Cristo!
 
                         </p>
